Add rules for wiremock

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -63,12 +63,14 @@ frontend my-front-https
         acl letsencrypt-acl path_beg /.well-known/acme-challenge/
  	acl nas_acl path_beg -i /nas /synoSDSjslib /scripts/ext-3 /scripts/scrollbar /scripts/prototype- /webman /webapi
  	acl wordpress_acl path_beg -i /home /wp-admin 
+	acl wiremock_acl path_beg -i /wiremock
 
         #http-request set-path / if nas_acl
 
         use_backend backend_nas if nas_acl
         use_backend letsencrypt-backend if letsencrypt-acl        
         use_backend backend_wordpress if wordpress_acl
+	use_backend backend_wiremock if wiremock_acl
         default_backend my-back 
 
 
@@ -81,17 +83,23 @@ backend letsencrypt-backend
         server letsencrypt 127.0.0.1:54321
 
 backend backend_wordpress
-        reqrep ^([^\ ]*\ /)home[/]?(.*)     \1\2
-        balance roundrobin
-        server docker_wordpress 192.168.0.111:8000
+        #reqrep ^([^\ ]*\ /)home[/]?(.*)     \1\2
+	reqrep ^([^\ :]*)\ /home/(.*) \1\ /\2        
+	balance roundrobin
+        server docker_wordpress 192.168.0.120:8000
+
+backend backend_wiremock
+	reqrep ^([^\ :]*)\ /wiremock/(.*) \1\ /\2
+	balance roundrobin
+        server docker_wordpress 192.168.0.120:8080
 
 backend my-back
-    mode http
+    #mode http
     balance roundrobin
-    option forwardfor
-    http-request set-header X-Forwarded-Port %[dst_port]
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    #option forwardfor
+    #http-request set-header X-Forwarded-Port %[dst_port]
+    #http-request add-header X-Forwarded-Proto https if { ssl_fc }
     #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-    server docker_wordpress 192.168.0.111:8000 
+    server docker_wordpress 192.168.0.120:8000 
     #server ds216j_console 192.168.0.101:5000
 
